--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,22 @@
 {
-    "presets": ["env", "react"],
-    "plugins": [
-        ["transform-object-rest-spread", { "useBuiltIns": true }]
-    ]
+    "env": {
+        "browser": {
+            "presets": [["env", {
+                "useBuiltIns": true
+            }], "react"],
+            "plugins": [
+                ["transform-object-rest-spread", { "useBuiltIns": true }]
+            ]
+        },
+        "server": {
+            "presets": [["env", {
+                "targets": {
+                    "node": "current"
+                }
+            }], "react"],
+            "plugins": [
+                ["transform-object-rest-spread", { "useBuiltIns": true }]
+            ]
+        }
+    }
 }
