--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.5",
     "postcss-loader": "^2.1.5",
+    "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
     "sass-lint": "^1.12.1",
     "sass-loader": "^7.0.3",
