--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -1,17 +1,18 @@
 rules:
-    no-ids: 0
-    no-color-literals: 0
-    no-color-keywords: 0
+    indentation:
+        - 1
+        -
+          size: 4
     nesting-depth:
         - 1
         -
           max-depth: 4
+    no-color-keywords: 0
+    no-color-literals: 0
+    no-css-comments: 0
+    no-ids: 0
     placeholder-in-extend: 0
     property-sort-order:
         - 1
         -
           order: 'concentric'
-    indentation:
-        - 1
-        -
-          size: 4
